# lattice

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  DECISIONS.md  KNOWN_ISSUES.md  NEXT_STEPS.md  README.md  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  turbo.json  vite.config.ts
.design/: .thumbnail  Knowledge Graph App.dc.html
.design/uploads/: knowledge-graph-app-design-summary.md  knowledge-graph-mvp-implementation-plan.md
.github/workflows/: cache-warm.yml  release.yml
.plan/: 00-overview.md  01-foundation.md  02-database.md  03-auth-and-shell.md  04-editor-and-documents.md  05-blob-storage.md  06-ingestion-pipeline.md  07-graph-extraction.md  08-graph-view.md  09-assistant-chat.md  10-polish-and-launch.md
apps/web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/src/: env.ts
data/: assistant.json
scripts/: release.sh
src/: App.tsx
src-desktop/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src-desktop/src/: main.tsx
src-desktop/src-tauri/: Cargo.toml  tauri.conf.json
src-desktop/src-tauri/capabilities/: default.json
src-desktop/src-tauri/src/: db.rs  lib.rs
src-desktop/src-tauri/src/commands/: chat.rs  docs.rs  settings.rs
src-desktop/src/lib/: chunk.ts  codemirror-lattice.ts  ipc.ts  parse.ts  types.ts
src-desktop/src/screens/: AssistantScreen.tsx  DashboardScreen.tsx  EditorScreen.tsx  GraphScreen.tsx  SettingsScreen.tsx
src-desktop/src/styles/: globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: app.lattice.desktop.metainfo.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  embedding.rs  lib.rs  main.rs  workspace.rs
src-tauri/src/commands/: docs.rs  embedding.rs  graph.rs  mod.rs  settings.rs  workspace.rs
src/components/assistant/: chat.tsx  markdown-preview.tsx
src/components/editor/: CreateNotePrompt.tsx  DocumentTabs.tsx  EditorPane.tsx  MarkdownPreview.tsx  UploadDetail.tsx
src/components/onboarding/: Onboarding.tsx
src/components/settings/: EndpointForm.tsx  use-local-embedding.ts
src/components/shell/: Shell.tsx
src/components/ui/: alert-dialog.tsx  card.tsx  confirm-dialog.tsx  context-menu.tsx  dropdown-menu.tsx  index.ts  input.tsx  logo.tsx  resize-handle.tsx  separator.tsx  theme-provider.tsx
src/lib/: codemirror-lattice.ts  format.ts  graph-build.ts  ipc.ts  layout-prefs.ts  tokens.ts  types.ts
src/lib/ai/: citations.ts  embeddings.ts  (+5 more)
src/screens/: EditorScreen.tsx  SettingsScreen.tsx
(+67 files in other folders)
