[package]
name = "lattice-desktop"
version = "0.5.2"
description = "Lattice desktop - local-first knowledge graph second brain"
edition = "2021"
rust-version = "1.82"

[lib]
name = "lattice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
parking_lot = "0.12"
ureq = "3.2.1"
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
tokenizers = "0.23.1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
# Thin LTO, not fat: with candle in the tree, whole-graph LTO at one codegen
# unit added minutes of uncachable work to every build for no measurable win
# in a webview app — the embedding hot loops are optimized inside candle's
# own crates either way.
lto = "thin"
codegen-units = 16
strip = true
